Configura relatórios de produtos.
- [x] Todos os produtos
- [x] Produtos ativos
- [x] Produtos inativos

Refatora.
Melhora legibilidade do código.
Usando flake8 ao invés de pyfalkes.
Ajusta testes do projeto / travis.

This close #130

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -185,9 +185,9 @@
           <a href="#">Relatórios</a>
           <ul>
             <li>
-              <a href="{% url 'products_report' %}">
+              <a href="{% url 'dashboard_report' %}">
                 <i class="fa fa-download"></i>
-                <span>Produtos</span>
+                <span>Todos os relarórios</span>
               </a>
             </li>
           </ul>
