Configura relatórios de pedidos.
- [x] Todos os pedidos
- [x] Pedidos novos
- [x] Pedidos abertos

This close #132

--- a/templates/dashboard_demo.html
+++ b/templates/dashboard_demo.html
@@ -45,7 +45,7 @@
           <!-- Mini Stats Panel Start -->
           <div class="miniStats--panel">
             <div class="miniStats--header bg-darker">
-              <p class="text-blue">Pedidos</p>
+              <p class="text-orange">Pedidos</p>
 
               <p class="miniStats--label text-white bg-orange">
                 <a class="text-white" href="{% url 'pedidos_list' %}">
