Improve reports files.
This close #136

--- a/templates/reports/reports.html
+++ b/templates/reports/reports.html
@@ -130,7 +130,7 @@
             </div>
 
             <div class="miniStats--body">
-              <a href="#">
+              <a href="{% url 'parceiros_report_all' %}">
                 <i class="miniStats--icon fa fa-download text-green" style="opacity: 1;z-index: 1;"></i>
               </a>
 
