Resolve questão de ordenação de produtos com acentos.

--- a/templates/products/list.html
+++ b/templates/products/list.html
@@ -82,7 +82,7 @@
               {% endif %}
             </td>
             <td>
-              {{ produto.descricao }}
+              {{ produto.descricao|normalize_for_table }}
             </td>
             <td>
               R$ {{ produto.cliente_paga }}
